# nanoservices2

./: .clang-format  .gitignore  CMakeDefs.cmake  CMakeLists.txt  README.md  compile_commands.json  main.cpp  main_test.cpp  sonar-project.properties
.github/workflows/: build.yml  codacy-analysis.yml  codeql-analysis.yml  sonarcloud.yml
cmake/scripts/: run_gcov.sh  run_lcov.sh
core/: main.cpp
core/exception/: NsException.cpp  NsException.h  exception_test.cpp  ns_exception.cpp  ns_exception.h
core/serialization/: serialization.cpp  serialization.h
plugins/configuration/: configuration.cpp  configuration.h
plugins/configuration/argc_argv/: configuration_argc_argv.cpp
plugins/dispatch/: README.md
plugins/logging/: logging.cpp  logging.h
plugins/logging/stdout/: logging_stdout.cpp
plugins/monitoring/: monitoring.h  monitoring_none.cpp
plugins/serialization/: serializer.h
src/: _test_main.cpp  main.cpp  main_test.cpp
src/core/exception/: _test_exception.cpp  exception_test.cpp  ns_exception.cpp
src/core/serialization/: _test_serialization.cpp  serialization.cpp  serialization.h
src/plugins/admcalls/: README.md
src/plugins/configuration/: configuration.cpp  configuration.h
src/plugins/configuration/argc_argv/: configuration_argc_argv.cpp
src/plugins/logging/: logging.cpp  logging.h
src/plugins/logging/stdout/: logging_stdout.cpp
src/plugins/monitoring/: monitoring.h
src/util/macroutils/: position.h
src/util/stringutils/: _test_stringutils.cpp  stringutils.cpp  stringutils.h  stringutils_test.cpp
src/util/testing/: testing.cpp  testing.h
src/util/typeutils/: _test_typeutils.cpp  demangle.cpp  demangle.h
util/macroutils/: classname.h  position.h
util/stringutils/: stringutils.cpp  stringutils.h  stringutils_test.cpp
util/templateutils/: lambdaToFunction.h  specialization.h
